Fix test to use junit and test without preview mode.